fix: overflow fix in mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Mobile Overflow Prevention */
+html,
+body {
+  overflow-x: hidden;
+}
